@@ -7,10 +7,24 @@ import javax.management.NotificationListener;
 import javax.management.openmbean.CompositeData;
 import java.lang.management.GarbageCollectorMXBean;
 import java.lang.management.ManagementFactory;
+import java.util.ArrayList;
 import java.util.List;
 
 public class Main {
+
+    //run with parameters:
+    //-Xms100m -Xmx100m -XX:MaxMetaspaceSize=100m -verbose:gc
+    // -Xloggc:logs/gc_pid_%p.log -XX:+PrintGCDateStamps
+    // -XX:+PrintGCDetails -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=10
+    // -XX:GCLogFileSize=100M -XX:+HeapDumpOnOutOfMemoryError
+    // -XX:HeapDumpPath=dumps/ -XX:OnOutOfMemoryError="kill -3 %p"
+
+    static int count = 10000;
+    static int delay = 100;
+    static String str = "number ";
+
     public static void main(String[] args) {
+        installGCMonitoring();
         try {
             run();
         } catch (InterruptedException e) {
@@ -18,20 +32,24 @@ public class Main {
         }
     }
 
-    public static void run() throws InterruptedException {
-        installGCMonitoring();
-        while (true){
-            int size = 100000;
-            String[] arr = new String[size];
-            for (int i = 0; i < size; i++) {
-                arr[i] = ""+i;
-            }
-            System.out.println(getString()+size);
-            Thread.sleep(500);
+    private static void run() throws InterruptedException {
+        List<String> list = new ArrayList<>();
+        fillList(list, count);
 
+    }
+
+    private static void fillList(List<String> list, int count) throws InterruptedException {
+        int size = list.size();
+        int from = size/2;
+        for (int i = from; i < size; i++) {
+            list.set(i,str + String.valueOf(i));
         }
-
-
+        for (int i = 0; i < count; i++) {
+            list.add(str + String.valueOf(i));
+        }
+        System.out.println("list is full, size = "+list.size());
+        Thread.sleep(delay);
+        fillList(list, count);
     }
 
     private static void installGCMonitoring() {
@@ -49,7 +67,8 @@ public class Main {
                     long duration = info.getGcInfo().getDuration();
                     String gctype = info.getGcAction();
 
-                    System.out.println(gctype+": - "+info.getGcInfo().getId()+", "+info.getGcName()+"(from "+info.getGcCause()+") "+duration+" millis");
+                    System.out.println(gctype+": - "+info.getGcInfo().getId()+
+                            ", "+info.getGcName()+"(from "+info.getGcCause()+") "+duration+" millis");
 
 
                 }
@@ -59,7 +78,5 @@ public class Main {
         }
     }
 
-    public static String getString(){
-        return "iteration, size = ";
-    }
+
 }
